--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <head>
 <title>Spring Fest</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
 
 
-
-body{	overflow-x:hidden;
+
+
+body{	/*overflow-x:hidden;*/
 	baackground-repeat:no-repeat;
 	background-position: left top;
    	 background-size: 100%;
@@ -417,9 +419,11 @@ By clicking Create an account, you agree to our Terms and confirm that you have 
 				<li><a style="color:#3b5998;font-size:13px;"href="#" id="plus" title="Show more languages"><b>+</b></a></li>
 
 					</ul>
-
+
+
 		</div>	
-					<div id="underborder"></div>	
+					<div id="underborder"></div>
+	
 	</div>													
 </div>
 </body>
