--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 
-body{	/*overflow-x:hidden;*/
+body{	overflow-x:hidden;
 	baackground-repeat:no-repeat;
 	background-position: left top;
    	 background-size: 100%;
