--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@ a:hover{
 			<td style="color:white;font-size:12px; font-family: Helvetica, Arial, sans-serif;">Email or Phone</td>
 			<td style="color:white;font-size:12px;    font-family: Helvetica, Arial, sans-serif;">Password</td></tr>
 			<tr">			
-			<td style=><input  type="text" id="email" autofocus placeholder="Email or Phone" title="enter your email/phone please" autocomplete="on" size="16"></td><td> <input type="text" autofocus required  title=" Enter Password"id="password" placeholder="******* " size="16"></input></td>
+			<td style=><input  type="text" id="email" autofocus placeholder="Email or Phone" title="enter your email/phone please" autocomplete="on" size="16"></td><td> <input type="password" autofocus required  title=" Enter Password"id="password" placeholder="******* " size="16"></input></td>
 			
 			
 			
-			<td><input type="submit" style="background-color:#377ae8;color:white; cursor:pointer;" id="login" autofocus required size="50" value="Log In"></input></td>
+			<td><input type="button" style="background-color:#377ae8;color:white; cursor:pointer;" id="login" autofocus required size="50" value="Log In"></input></td>
 
 			</tr>
 			<tr ><td></td>
